# cuttle-translator

./: .gitmodules  CMakeLists.txt  CMakeSettings.windows.json  README.md  cuttle-translator.project
cmake/: add_dependency.cmake  prepend_path.cmake
scripts/: get-deps.sh
src/: CMakeLists.txt  call_tree.hpp  context_holder.hpp  cutvm_translator_nil.hpp  dictionary.cpp  dictionary.hpp  dictionary_funcs.cpp  dictionary_funcs.hpp  dictionary_methods.hpp  language.hpp  token.hpp  translate_state.hpp  translator.cpp  translator.hpp  translator_methods.hpp  tree_utils.cpp  tree_utils.hpp  utils.hpp  value.cpp  value.hpp  value_methods.hpp
tests/: CMakeLists.txt  main.cpp  test.hpp  test_dictionary.cpp  test_dictionary.hpp  test_dictionary_funcs.cpp  test_dictionary_funcs.hpp  test_manager.cpp  test_token.hpp  test_translator.cpp  test_translator.hpp  token_test.cpp
